# xosced

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
appln/: CMakeLists.txt  main.cxx
bind/: .gitignore  CMakeLists.txt  __gui__.py  __test__.py  gui.py  pyxosc.cxx  setup.py  wxglade.wxg
cmake/: FetchContentPugixml.cmake  FetchContentPyBind11.cmake
src/: xosc.cxx
